--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,4 +113,15 @@
             android:textSize="@dimen/text_size_small"
             android:textStyle="bold" />
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:background="#80000000"
+        style="@android:style/Widget.ProgressBar.Large"
+        android:indeterminate="true"
+        />
+
 </RelativeLayout>
