--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -14,10 +14,19 @@
 
         android:layout_above="@+id/layout_bottom">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Giỏ Hàng"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:layout_gravity="center"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -73,27 +82,34 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/textColorHeading"
-                            android:textSize="@dimen/text_size_small"
+                            android:textSize="18sp"
                             android:textStyle="bold"
                             android:text="Địa chỉ giao hàng"/>
-
+                        <TextView
+                            android:id="@+id/tv_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/textColorSecondary"
+                            android:textSize="14sp"
+                            android:layout_marginTop="@dimen/define_dimen_5"
+                            android:text="Chưa có địa chỉ giao hàng"/>
+                        <TextView
+                            android:id="@+id/tv_sdt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/textColorSecondary"
+                            android:textSize="14sp"
+                            android:layout_marginTop="@dimen/define_dimen_5"
+                            android:text="Chưa có địa chỉ giao hàng"/>
                         <TextView
                             android:id="@+id/tv_address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/textColorSecondary"
-                            android:textSize="@dimen/text_size_xsmall"
+                            android:textSize="14sp"
                             android:layout_marginTop="@dimen/define_dimen_5"
                             android:text="Chưa có địa chỉ giao hàng"/>
                     </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/img_next_address"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_next_right"/>
                 </RelativeLayout>
 
             </LinearLayout>
@@ -115,14 +131,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/textColorHeading"
-                    android:textSize="@dimen/text_size_small"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:text="Thanh toán"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/define_dimen_10">
+                    android:layout_marginTop="14sp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -145,7 +161,7 @@
                             android:layout_marginTop="@dimen/define_dimen_5"
                             android:text="@string/app_name"
                             android:textColor="@color/textColorSecondary"
-                            android:textSize="@dimen/text_size_xsmall" />
+                            android:textSize="14sp" />
                     </LinearLayout>
 
                     <TextView
