Ngô Khánh Hoàng - Push chức năng đặt hàng

--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/img_toolbar_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:padding="@dimen/define_dimen_10"
             android:src="@drawable/ic_back_toolbar"
             tools:ignore="ContentDescription" />
