--- a/app/src/main/res/layout/item_admin_product.xml
+++ b/app/src/main/res/layout/item_admin_product.xml
@@ -61,17 +61,22 @@
                 android:layout_marginTop="@dimen/define_dimen_2"
                 android:orientation="horizontal">
 
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Giá: "
+                    android:textColor="@color/textColorSecondary"
+                    android:textSize="@dimen/text_size_small" />
 
                 <TextView
                     android:id="@+id/tv_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"
                     android:text="@string/app_name"
-                    android:layout_marginStart="@dimen/define_dimen_10"
-                    android:textColor="@color/textColorSecondary"
-                    android:textSize="@dimen/text_size_xsmall" />
+                    android:textStyle="bold"
+                    android:layout_marginStart="@dimen/define_dimen_5"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="@dimen/text_size_small" />
             </LinearLayout>
 
             <LinearLayout
