--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,7 @@
     <color name="blue">#3F51B5</color>
     <color name="black_overlay">#667C7474</color>
     <color name="dividerColor">#BDBDBD</color>
+
+    <color name="teal_200">#03DAC5</color>
+    <color name="gray">#CCCCCC</color>
 </resources>
