--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,9 @@
     <color name="blue">#3F51B5</color>
     <color name="black_overlay">#667C7474</color>
     <color name="dividerColor">#BDBDBD</color>
+    <color name="gray">#808080</color> <!-- Màu xám -->
+    <color name="light_gray">#D3D3D3</color> <!-- Màu xám nhạt nếu bạn cần -->
+    <color name="teal_200">#FF03DAC5</color>
 
-    <color name="teal_200">#03DAC5</color>
-    <color name="gray">#CCCCCC</color>
+
 </resources>
